# mltutor

./: .gitignore  BUILD_EXECUTABLES.md  COMPARATIVA_DESPLIEGUE.md  Dockerfile  Dockerfile.swarm  LEEME_PRIMERO.md  PLAN_MIGRACION.md  README.md  SOLUCION_SWARM.md  SWARM_FIX.md  app.py  app_final.py  app_refactored.py  app_streamlit_v2.py  dataset_manager.py  dataset_metadata.py  decision_boundary.py  deploy-production.sh  deploy-swarm.sh  deploy.sh  diagnose-swarm.sh  docker-compose.production.yml  docker-compose.swarm.yml  docker-compose.yml  fix-swarm-images.sh  launcher.py  launcher_rich.py  loadtest.py  model_evaluation.py  model_training.py  monitor-swarm.sh  nginx.conf  pyinstaller.spec  pyproject.toml  rebuild-swarm.sh  release.sh  requirements.txt  run_mltutor.sh  scale-swarm.sh  skills-lock.json  (+7 more)
.claude/: launch.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: build-executables.yml
.streamlit/: config.toml
algorithms/: code_examples.py  dataset_tab.py  decission_tree_app.py  export.py  knn_app.py  linear_regression_app.py  model_evaluation.py  model_training.py  neural_network_app.py
apps/: decission_tree_app.py  knn_app.py  linear_regression_app.py  navbar.py  neural_network_app.py
assets/: icon.icns
data/sample_datasets/: breast_cancer.csv  iris.csv  wine.csv
dataset/: additional_datasets.py  dataset_manager.py  dataset_tab.py
installers/: create_icon.py
installers/linux/: AppRun  build_appimage.sh  mltutor.desktop
installers/macos/: Info.plist  build_dmg.sh  launch.sh
installers/windows/: mltutor.iss
mltutor/: config.py  ui.py
mltutor/algorithms/: code_examples.py  export.py  model_training.py
mltutor/apps/: knn_app.py  linear_regression_app.py
mltutor/dataset/: additional_datasets.py  dataset_manager.py  dataset_tab.py
mltutor/viz/: nn.py  residual.py
viz/: decision_boundary.py  features.py  nn.py  nn_extra.py  roc.py
